tests/baselines/reference/iteratorSpreadInArray9.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray9.ts(13,17): error TS2322: Type 'SymbolIterator' is not assignable to type 'Iterable<symbol>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => SymbolIterator' is not assignable to type '() => Iterator<symbol>'.
      Type 'SymbolIterator' is not assignable to type 'Iterator<symbol>'.
        Types of property 'next' are incompatible.
          Type '() => { value: symbol; }' is not assignable to type '(value?: any) => IteratorResult<symbol, symbol | void>'.
            Type '{ value: symbol; }' is not assignable to type 'IteratorResult<symbol, symbol | void>'.
              Property 'done' is missing in type '{ value: symbol; }' but required in type 'IteratorReturnResult<symbol | void>'.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray9.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol()
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array = [...new SymbolIterator];
                    ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'SymbolIterator' is not assignable to type 'Iterable<symbol>'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '() => SymbolIterator' is not assignable to type '() => Iterator<symbol>'.
!!! error TS2322:       Type 'SymbolIterator' is not assignable to type 'Iterator<symbol>'.
!!! error TS2322:         Types of property 'next' are incompatible.
!!! error TS2322:           Type '() => { value: symbol; }' is not assignable to type '(value?: any) => IteratorResult<symbol, symbol | void>'.
!!! error TS2322:             Type '{ value: symbol; }' is not assignable to type 'IteratorResult<symbol, symbol | void>'.
!!! error TS2322:               Property 'done' is missing in type '{ value: symbol; }' but required in type 'IteratorReturnResult<symbol | void>'.
!!! related TS2728 /.ts/lib.es2015.iterable.d.ts:37:5: 'done' is declared here.